--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <title>Creating a Simple Parallax Scrolling Website</title>
+       <title>Eze Nmezi</title>
        <link rel="stylesheet" href="css/style.css"/>
 	   <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
        <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
@@ -45,22 +45,22 @@ $(document).ready(function() {
 <body>
 <!----- LINK BACK TO THE TUTORIAL--->  
 <div id="demo_back">
-<a href="#" class="lpanel"> << BACK TO THE 1STWEBDESIGN ARTICLE </a>
-<a href="#" class="rpanel"> NEXT DEMO >> </a>
+<a href="#" class="lpanel"></a>
+<a href="#" class="rpanel"></a>
 </div>
 
 <!----- HEADER START--->   
 <header id="header">
 <div class="content">
-<div id="logo"><a href=""> PARALLAX </a></div>
+<div id="logo"><a href="">&nbsp;Eze Nmezi </a></div>
 
 <nav id="nav">
 	<ul>
-		<li><a href="#slide1" class="active" title="Next Section" >Slide 1</a></li>
-		<li><a href="#slide2" title="Next Section">Slide 2</a></li>
-		<li><a href="#slide3" title="Next Section">Slide 3</a></li>
-		<li><a  href="#slide4" title="Next Section">Slide 4</a></li>
-		<li><a href="#slide5" title="Next Section">Slide 5</a></li>
+		<li><a href="#slide1" class="active" title="Who (People)About Portfolio Photos Videos Section" >Photos</a></li>
+		<li><a href="#slide2" title="What (Things) Services Skills Print blog Profile Section">Skills</a></li>
+		<li><a href="#slide3" title="When (Time)Intereactive Background Section">Background</a></li>
+		<li><a  href="#slide4" title="Where (Places) Biography Award Section"> Awards</a></li>
+		<li><a href="#slide5" title="Why(Motives) Contact Twitter Projects Resume Section">Contact</a></li>
 	</ul>
 </nav>
 </div>
@@ -70,23 +70,19 @@ $(document).ready(function() {
 <!----- SLIDES START --->   	
 	<div id="slide1">
 		<div class="content">
-			<div id="christmas_tree"> </div>
-			<div id="snowflakes1"></div>
-			<div id="snowflakes2"></div>
-            <h2>MERRY</h2>
-		    <h1>CHRISTMAS</h1>
+			<div id="camera"> </div>   
 		    <div id="divider"> </div>
-		     <h3>HAPPY NEW YEAR </h3>
+ 			<div id="videocamera"> </div>
+	<h3>Photography • Cinematography </h3>
            <div id="ribbon"></div>
-	       <div id="new_year"> </div>
 		</div> 
     </div> 
 
 	<div id="slide2">
 		<div class="content" >
             <div class="quotes_container">
-		    <h3 class="quotes">“Then the Grinch thought of something he hadn't before! What if Christmas, he thought, doesn't come from a store. What if Christmas...perhaps...means a little bit more!”</h3>
-		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Dr. Seuss </h4>
+		    <h3 class="quotes">“Javascript, Angular, Drupal, JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
+		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
 		</div> 
 		</div> 
     </div> 
@@ -95,8 +91,8 @@ $(document).ready(function() {
    <div id="slide3">
 		<div class="content">
 			   <div class="quotes_container">
-		       <h3 class="quotes">“I truly believe that if we keep telling the Christmas story, singing the Christmas songs, and living the Christmas spirit, we can bring joy and happiness and peace to this world.”  </h3>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Norman Vincent Peale </h4>
+		       <h3 class="quotes">“I truly believe that all aspects of business and life are being expressed through Digital Media. The stories of our human experience are no longer   rocks buried in the sand they are forms of life stored in clouds and will mold the future to come”  </h3>
+		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Client </h4>
 		    </div> 
 		</div> 
     </div> 
@@ -105,8 +101,8 @@ $(document).ready(function() {
 	<div id="slide4">
 		<div class="content">
               <div class="quotes_container">
-		    <h3 class="quotes">“Christmas doesn't come from a store, maybe Christmas perhaps means a little bit more....” </h3>
-		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Dr. Seuss </h4>
+		    <h3 class="quotes">“Awards are for the Birds.....reconigtion isn't neccesary when the results make impact on the lives of your audience” </h3>
+		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Patient </h4>
 		</div> 
 		</div> 
     </div> 
@@ -115,10 +111,10 @@ $(document).ready(function() {
 	<div id="slide5">
 		<div class="content">
            <div class="quotes_container">
-		    <h3 class="quotes">“My idea of Christmas, whether old-fashioned or modern, is very simple: loving others. Come to think of it, why do we have to wait for Christmas to do that?” </h3>
-		    <img src="img/bob.png" align="left"/> <h4 class="author_name_white">Bob Hope </h4>
+		    <h3 class="quotes">“Join in.....the conversation happening...RIGHT NOW” </h3>
+		    <img src="img/bob.png" align="left"/> <h4 class="author_name_white">Yup</h4>
 		  </div> 
-		<div id="copyright"><a href="http://www.1stwebdesigner.com/">Copyright 1stwebdesigner.com </a></div>  
+		<div id="copyright"><a href="http://www.1stwebdesigner.com/">Copyright 2015 EzeStudio</a></div>  
 		</div> 
 		
 
