--- a/cv/index.html
+++ b/cv/index.html
@@ -79,7 +79,7 @@ $(document).ready(function() {
     </div> 
 
 	<div id="slide2">
-    
+    <div class="slide2vid" >
      <video autoplay muted loop>
         <source src="img/paraback.mp4" type="video/mp4">
         <source src="img/paraback.ogg" type="video/ogg">
@@ -90,6 +90,7 @@ $(document).ready(function() {
 		    <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
 		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
 		</div> 
+        </div> 
 		</div> 
     </div> 
 	
