--- a/cv/index.html
+++ b/cv/index.html
@@ -81,7 +81,7 @@ $(document).ready(function() {
 	<div id="slide2">
         
         
-             <div class="content" >
+             <div class="vidtypecontent" >
                  <div class="quotes_container">
                         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
