--- a/cv/index.html
+++ b/cv/index.html
@@ -137,15 +137,14 @@ $(document).ready(function() {
 
     </div> 
 	
-<!----- SLIDES END ---><div id="wrapper">
+<!----- SLIDES END --->
+<div id="wrapper">
     <video id="video" width="560" height="320" onclick="play();">
-        <source type="video/webm" src="http://www.w3schools.com/html/mov_bbb.mp4" />
+        <source type="video/webm" src="paraback.mp4" />
     </video>
-    <div id="form">
-        <p>I am over the video</p>
-        sadfdfdgsgsdfg sdfg dfs gsd gsd gdsf sd
-
-ffdfsg dfs ds dsf gdsf gdsfg dsfg
+    <div id="blanker">
+        <p>I am over the video</p>h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
+                         <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
     </div>
 </div>
 
