--- a/cv/index.html
+++ b/cv/index.html
@@ -140,7 +140,7 @@ $(document).ready(function() {
 <!----- SLIDES END --->
 <div id="wrapper">
     <video id="video" width="560" height="320" onclick="play();">
-        <source type="video/webm" src="paraback.mp4" />
+        <source type="video/webm" src="img/paraback.mp4" />
     </video>
     <div id="blanker">
         <p>I am over the video</p>h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
