--- a/cv/index.html
+++ b/cv/index.html
@@ -143,7 +143,7 @@ $(document).ready(function() {
         <source type="video/webm" src="img/paraback.mp4" />
     </video>
     <div id="blanker">
-        <p>I am over the video</p>h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
+        <p>I am over the video</p><h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
     </div>
 </div>
