--- a/cv/index.html
+++ b/cv/index.html
@@ -84,7 +84,7 @@ $(document).ready(function() {
                 <source src="img/paraback.mp4" type="video/mp4">
                 <source src="img/paraback.ogg" type="video/ogg">
             </video>
-           <div class="quotes_container">
+           <div class="blanker">
                         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
            </div>       
