--- a/cv/index.html
+++ b/cv/index.html
@@ -80,7 +80,7 @@ $(document).ready(function() {
 
 
 <div id="wrapper">
-    <video id="video" width="560" height="320" onclick="play();">
+    <video id="video" width="560" height="320" autoplay muted loop>
         <source type="video/webm" src="img/paraback.mp4" />
     </video>
     <div id="blanker">
