--- a/cv/index.html
+++ b/cv/index.html
@@ -130,9 +130,11 @@ $(document).ready(function() {
 	
 <!----- SLIDES END --->
 <div id="wrapper">
-    <video id="video" width="560" height="320" onclick="play();">
-        <source type="video/webm" src="img/paraback.mp4" />
-    </video>
+    <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  <iframe frameborder="0" height="100%" width="100%" 
+    src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=0&showinfo=0&autohide=1">
+  </iframe>
+</div>
     <div id="blanker">
         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
