--- a/cv/index.html
+++ b/cv/index.html
@@ -129,10 +129,10 @@ $(document).ready(function() {
     </div> 
 	
 <!----- SLIDES END --->
-<div id="wrapper2">
+<div id="wrapper">
     <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/UorDsF9lyMo?autoplay=0&controls=0&showinfo=0&autohide=0">
+    src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=0&showinfo=0&autohide=1">
   </iframe>
 </div>
     <div id="blanker">
