--- a/cv/index.html
+++ b/cv/index.html
@@ -136,7 +136,24 @@ $(document).ready(function() {
   </iframe>
 </div>
     <div id="blanker">
-        <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
+        <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
     </div>
 </div>
