--- a/cv/index.html
+++ b/cv/index.html
@@ -139,15 +139,25 @@ $(document).ready(function() {
         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”<br>
 <br>
 <br>
+<br>sdfsf
+<br>
+<br>
+<br>xcvxv
 <br>
 <br>
 <br>
 <br>
+<br>sfdfsdf
+<br>
+<br>
+<br><br>
+<br>
+<br>xcvxv
 <br>
 <br>
 <br>
 <br>
-<br>
+<br>sfdfsdf
 <br>
 <br>
 <br>
