--- a/cv/index.html
+++ b/cv/index.html
@@ -130,12 +130,12 @@ $(document).ready(function() {
 	
 <!----- SLIDES END --->
 <div id="urapper">
-    <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+    <div clas="taller" style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%" 
     src="https://youtube.com/embed/UorDsF9lyMo?autoplay=0&controls=1&showinfo=0&autohide=0">
   </iframe>
 </div>
-    <div id="blanker">
+    <div id="taller">
         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”<br>
 <br>
 <br>
