--- a/cv/index.html
+++ b/cv/index.html
@@ -132,7 +132,7 @@ $(document).ready(function() {
 <div id="urapper">
     <div clas="taller" style="position: fixed; z-index: -99; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=1&showinfo=0&autohide=0">
+    src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=1&showinfo=0&autohide=0&rel=0">
   </iframe>
 </div>
     <div id="taller">
