--- a/cv/index.html
+++ b/cv/index.html
@@ -135,32 +135,9 @@ $(document).ready(function() {
     src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=1&showinfo=0&autohide=0&rel=0">
   </iframe>
 </div>
-    <div id="taller">
+    <div >
         <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”<br>
-<br>
-<br>
-<br>sdfsf
-<br>
-<br>
-<br>xcvxv
-<br>
-<br>
-<br>
-<br>
-<br>sfdfsdf
-<br>
-<br>
-<br><br>
-<br>
-<br>xcvxv
-<br>
-<br>
-<br>
-<br>
-<br>sfdfsdf
-<br>
-<br>
-<br>
+
 <br>
 </h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
