--- a/cv/index.html
+++ b/cv/index.html
@@ -130,7 +130,7 @@ $(document).ready(function() {
 	
 <!----- SLIDES END --->
 <div id="urapper">
-    <div clas="taller" style="position: fixed; z-index: 9999; width: 100%; height: 100%">
+    <div class="taller" style="position: fixed; z-index: 9999; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%" 
     src="https://youtube.com/embed/UorDsF9lyMo?autoplay=1&controls=1&showinfo=0&autohide=0&rel=0">
   </iframe>
