new video and blank goe

--- a/cv/index.html
+++ b/cv/index.html
@@ -83,7 +83,7 @@ $(document).ready(function() {
     <video id="video" width="560" height="320" autoplay muted loop>
         <source type="video/webm" src="img/paraback.mp4" />
     </video>
-    <div id="blanker">
+    <div id="slide2">
        <h3 class="quotes">“Javascript, Angular, Drupal,  JQuery, HTML5 have all been used with Adobe, and Microsoft tools!”</h3>
                          <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">President  </h4>
     </div>
