--- a/cv/index.html
+++ b/cv/index.html
@@ -132,7 +132,7 @@ $(document).ready(function() {
 <div id="urapper">
     <div class="taller" style="position:relative; z-index: 1; width: 100%; height: 100%">
   <iframe frameborder="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/P9h1iNALo_k?autoplay=1&controls=1&showinfo=0&autohide=0&rel=0">
+    src="https://youtube.com/embed/P9h1iNALo_k?autoplay=1&loop=1&controls=1&showinfo=0&autohide=0&rel=0">
   </iframe>
 </div>
     <div >
