--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Eze Nmezi</title>
-    <meta name="description" content="">
+    <meta name="description" content="A personal website that illustrate my career path and current skills">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
