--- a/index.html
+++ b/index.html
@@ -32,55 +32,62 @@
     </header>
     <section class="content">
       <article>
-        <h1>Unique e-Style</h1>
+        <h1>My Work</h1>
         <hr>
         <div class="clothes-pics">
           <div class="row img-row">
-            <figure class="columns four"><img src="images/model1.jpg">
-              <figcaption>Blackbird Sweater - <strong>$15</strong></figcaption>
+            <figure class="columns two"><img src="images/brand1.jpg">
+              <figcaption>Drupal, WordPress, Moodle<strong>+</strong></figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model2.jpg">
-              <figcaption>Blackbird Sweater - <strong>$25</strong></figcaption>
+            <figure class="columns two"><img src="images/brand2.jpg">
+              <figcaption>Drupal, Wix, CSS3</figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model3.jpg">
-              <figcaption>Blackbird Sweater - <strong>$75</strong></figcaption>
+            <figure class="columns two"><img src="images/brand3.jpg">
+              <figcaption>HTML5, FLASH, ActionScript</figcaption>
             </figure>
-          </div>
-          <div class="row img-row">
-            <figure class="columns four"><img src="images/model1.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand4.jpg">
+              <figcaption>InDesign, Quark, SAP, MSOffice</figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model2.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand5.jpg">
+              <figcaption>Package Design, Illustrator</figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model3.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand6.jpg">
+              <figcaption>Final Cut, Cinematography, Premiere</figcaption>
             </figure>
           </div>
           <div class="row img-row">
-            <figure class="columns four"><img src="images/model1.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand7.jpg">
+              <figcaption>Photoshop, Branding, Photography, ASP</figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model2.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand8.jpg">
+              <figcaption>Tradeshow, Digital Signage, Billboards</figcaption>
             </figure>
-            <figure class="columns four"><img src="images/model3.jpg">
-              <figcaption>Blackbird Sweater - <strong>$5</strong></figcaption>
+            <figure class="columns two"><img src="images/brand9.jpg">
+              <figcaption>Interactive DVD, ActionScipt, Javascript</figcaption>
+            </figure>
+            <figure class="columns two"><img src="images/brand10.jpg">
+              <figcaption>UX Design, PHP, ASP, SQL, Branding, Social Media</figcaption>
+            </figure>
+            <figure class="columns two"><img src="images/brand11.jpg">
+              <figcaption>Flash, SEO, SMM, Animation</figcaption>
+            </figure>
+            <figure class="columns two"><img src="images/brand12.jpg">
+              <figcaption>Drupal, Photography, Project Management</figcaption>
             </figure>
           </div>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <hr>
-        <h1>Fine Tayloring</h1>
+        <h1>My Skills</h1>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <hr>
         <div class="large-window">
           <div class="window-tint">
-            <div class="promo-text">Eze's Suits<strong><span>from</span> $199</strong><a href="" class="window-cta">Buy Me</a></div>
+            <div class="promo-text">Give me a Call<strong><span>Cell 416-SER-IOUS </span></strong><a href="" class="window-cta">Call Now</a></div>
           </div>
         </div>
-        <h1>Rich History</h1>
+        <h1>I'm looking foward to hearing from you</h1>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <hr>
