--- a/index.html
+++ b/index.html
@@ -36,51 +36,39 @@
         <hr>
         <div class="clothes-pics">
           <div class="row img-row">
-            <figure class="columns two"><img src="images/brand1.jpg">
-              <figcaption>Drupal, WordPress, Moodle<strong>+</strong></figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand2.jpg">
-              <figcaption>Drupal, Wix, CSS3</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand3.jpg">
-              <figcaption>HTML5, FLASH, ActionScript</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand4.jpg">
-              <figcaption>InDesign, Quark, SAP, MSOffice</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand5.jpg">
-              <figcaption>Package Design, Illustrator</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand6.jpg">
-              <figcaption>Final Cut, Cinematography, Premiere</figcaption>
-            </figure>
+            <figure class="columns two"><a href="http://www.ccnm.edu" target="_blank"><img src="images/brand1.jpg">
+                <figcaption>Drupal, WordPress, Moodle<strong>+</strong></figcaption></a></figure>
+            <figure class="columns two"><a href="http://www.ccnmihc.ca" target="_blank"><img src="images/brand2.jpg">
+                <figcaption>Drupal, Wix, CSS3</figcaption></a></figure>
+            <figure class="columns two"><a href="https://web.archive.org/web/20010217183633/http://www.freshheads.labatt.com/" target="_blank"><img src="images/brand3.jpg">
+                <figcaption>HTML5, FLASH, ActionScript</figcaption></a></figure>
+            <figure class="columns two"><a href="http://wattisretail.com/projectPage.php?id=147" target="_blank"><img src="images/brand4.jpg">
+                <figcaption>InDesign, Quark, SAP, MSOffice</figcaption></a></figure>
+            <figure class="columns two"><a href="http://lexcorpweb.com/images/Projects/other/BIG_Deloitte1.png" target="_blank"><img src="images/brand5.jpg">
+                <figcaption>Package Design, Illustrator</figcaption></a></figure>
+            <figure class="columns two"><a href="http://upperviewhomes.com" target="_blank"><img src="images/brand6.jpg">
+                <figcaption>Final Cut, Cinematography, Premiere</figcaption></a></figure>
           </div>
           <div class="row img-row">
-            <figure class="columns two"><img src="images/brand7.jpg">
-              <figcaption>Photoshop, Branding, Photography, ASP</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand8.jpg">
-              <figcaption>Tradeshow, Digital Signage, Billboards</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand9.jpg">
-              <figcaption>Interactive DVD, ActionScipt, Javascript</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand10.jpg">
-              <figcaption>UX Design, PHP, ASP, SQL, Branding, Social Media</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand11.jpg">
-              <figcaption>Flash, SEO, SMM, Animation</figcaption>
-            </figure>
-            <figure class="columns two"><img src="images/brand12.jpg">
-              <figcaption>Drupal, Photography, Project Management</figcaption>
-            </figure>
+            <figure class="columns two"><a href="http://www.yak.com" target="_blank"><img src="images/brand7.jpg">
+                <figcaption>Photoshop, Branding, Photography, ASP</figcaption></a></figure>
+            <figure class="columns two"><a href="http://www.drbdiet.ca" target="_blank"><img src="images/brand8.jpg">
+                <figcaption>Tradeshow, Digital Signage, Billboards</figcaption></a></figure>
+            <figure class="columns two"><a href="http://www.satinfinish.com" target="_blank"><img src="images/brand9.jpg">
+                <figcaption>Interactive DVD, ActionScipt, Javascript</figcaption></a></figure>
+            <figure class="columns two"><a href="http://www.oicc.ca" target="_blank"><img src="images/brand10.jpg">
+                <figcaption>UX Design, PHP, ASP, SQL, Branding, Social Media</figcaption></a></figure>
+            <figure class="columns two"><a href="http://www.lifematescanada.com" target="_blank"><img src="images/brand11.jpg">
+                <figcaption>Flash, SEO, SMM, Animation</figcaption></a></figure>
+            <figure class="columns two"><a href="http://ccnmbntc.ca" target="_blank"><img src="images/brand12.jpg">
+                <figcaption>Drupal, Photography, Project Management</figcaption></a></figure>
           </div>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p>I am a Digital Media Professional with over ten years of design, development and web/video engineering experience. Proven skill in overseeing projects from conception to go-live. Demonstrated ability to engage and work closely with all levels up to the C-Suite.</p>
         <hr>
         <h1>My Skills</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p>I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promote educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.</p>
         <hr>
         <div class="large-window">
           <div class="window-tint">
@@ -89,7 +77,7 @@
         </div>
         <h1>I'm looking foward to hearing from you</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p>I love creating digital assests and Viral Video Content. I've launched videography campaigns through GoPro POV stunts and DSLR filming techniques to engage target audiences through links, blogs and e-marketing campaigns</p>
         <hr>
         <div class="blog-posts row">
           <div class="post columns four post-1">
