--- a/index.html
+++ b/index.html
@@ -32,43 +32,45 @@
     </header>
     <section class="content">
       <article>
-        <h1>My Work</h1>
+        <h1>M Y  &nbsp;&nbsp;  W O R K</h1>
         <hr>
         <div class="clothes-pics">
           <div class="row img-row">
-            <figure class="columns two"><a href="http://www.ccnm.edu" target="_blank"><img src="images/brand1.jpg">
-                <figcaption>Drupal, WordPress, Moodle<strong>+</strong></figcaption></a></figure>
-            <figure class="columns two"><a href="http://www.ccnmihc.ca" target="_blank"><img src="images/brand2.jpg">
+            <figure class="columns three"><a href="http://www.ccnm.edu" target="_blank"><img src="images/brand1.jpg">
+                <figcaption>Drupal, WordPress, Moodle & More</figcaption></a></figure>
+            <figure class="columns three"><a href="http://www.ccnmihc.ca" target="_blank"><img src="images/brand2.jpg">
                 <figcaption>Drupal, Wix, CSS3</figcaption></a></figure>
-            <figure class="columns two"><a href="https://web.archive.org/web/20010217183633/http://www.freshheads.labatt.com/" target="_blank"><img src="images/brand3.jpg">
+            <figure class="columns three"><a href="https://web.archive.org/web/20010217183633/http://www.freshheads.labatt.com/" target="_blank"><img src="images/brand3.jpg">
                 <figcaption>HTML5, FLASH, ActionScript</figcaption></a></figure>
-            <figure class="columns two"><a href="http://wattisretail.com/projectPage.php?id=147" target="_blank"><img src="images/brand4.jpg">
-                <figcaption>InDesign, Quark, SAP, MSOffice</figcaption></a></figure>
-            <figure class="columns two"><a href="http://lexcorpweb.com/images/Projects/other/BIG_Deloitte1.png" target="_blank"><img src="images/brand5.jpg">
-                <figcaption>Package Design, Illustrator</figcaption></a></figure>
-            <figure class="columns two"><a href="http://upperviewhomes.com" target="_blank"><img src="images/brand6.jpg">
-                <figcaption>Final Cut, Cinematography, Premiere</figcaption></a></figure>
+            <figure class="columns three"><a href="http://wattisretail.com/projectPage.php?id=147" target="_blank"><img src="images/brand4.jpg">
+                <figcaption>InDesign, Quark,SAP, MSOffice</figcaption></a></figure>
           </div>
           <div class="row img-row">
-            <figure class="columns two"><a href="http://www.yak.com" target="_blank"><img src="images/brand7.jpg">
+            <figure class="columns three"><a href="http://lexcorpweb.com/images/Projects/other/BIG_Deloitte1.png" target="_blank"><img src="images/brand5.jpg">
+                <figcaption>Package Design, Illustrator</figcaption></a></figure>
+            <figure class="columns three"><a href="http://upperviewhomes.com" target="_blank"><img src="images/brand6.jpg">
+                <figcaption>FCP, Premiere,Cinematography</figcaption></a></figure>
+            <figure class="columns three"><a href="http://www.yak.com" target="_blank"><img src="images/brand7.jpg">
                 <figcaption>Photoshop, Branding, Photography, ASP</figcaption></a></figure>
-            <figure class="columns two"><a href="http://www.drbdiet.ca" target="_blank"><img src="images/brand8.jpg">
-                <figcaption>Tradeshow, Digital Signage, Billboards</figcaption></a></figure>
-            <figure class="columns two"><a href="http://www.satinfinish.com" target="_blank"><img src="images/brand9.jpg">
-                <figcaption>Interactive DVD, ActionScipt, Javascript</figcaption></a></figure>
-            <figure class="columns two"><a href="http://www.oicc.ca" target="_blank"><img src="images/brand10.jpg">
-                <figcaption>UX Design, PHP, ASP, SQL, Branding, Social Media</figcaption></a></figure>
-            <figure class="columns two"><a href="http://www.lifematescanada.com" target="_blank"><img src="images/brand11.jpg">
-                <figcaption>Flash, SEO, SMM, Animation</figcaption></a></figure>
-            <figure class="columns two"><a href="http://ccnmbntc.ca" target="_blank"><img src="images/brand12.jpg">
-                <figcaption>Drupal, Photography, Project Management</figcaption></a></figure>
+            <figure class="columns three"><a href="http://www.drbdiet.ca" target="_blank"><img src="images/brand8.jpg">
+                <figcaption>Tradeshow, e-Signage,  Billboards</figcaption></a></figure>
+          </div>
+          <div class="row img-row">
+            <figure class="columns three"><a href="http://www.satinfinish.com" target="_blank"><img src="images/brand9.jpg">
+                <figcaption>Interactive DVD,  ActionScipt, Javascript</figcaption></a></figure>
+            <figure class="columns three"><a href="http://www.oicc.ca" target="_blank"><img src="images/brand10.jpg">
+                <figcaption>UX Design, PHP, ASP, SQL,<br> Branding, Social Media</figcaption></a></figure>
+            <figure class="columns three"><a href="http://www.lifematescanada.com" target="_blank"><img src="images/brand11.jpg">
+                <figcaption>Flash, SEO,  SMM, Animation</figcaption></a></figure>
+            <figure class="columns three"><a href="http://ccnmbntc.ca" target="_blank"><img src="images/brand12.jpg">
+                <figcaption>Drupal, Photography,  Project Management</figcaption></a></figure>
           </div>
         </div>
         <p>I am a Digital Media Professional with over ten years of design, development and web/video engineering experience. Proven skill in overseeing projects from conception to go-live. Demonstrated ability to engage and work closely with all levels up to the C-Suite.</p>
         <hr>
-        <h1>My Skills</h1>
+        <h1>MY SKILLS</h1>
         <hr>
-        <p>I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promote educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.</p>
+        <p>I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promoted educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.</p>
         <hr>
         <div class="large-window">
           <div class="window-tint">
@@ -81,19 +83,19 @@
         <hr>
         <div class="blog-posts row">
           <div class="post columns four post-1">
-            <h5>Post Title</h5><img src="images/posts/one.jpg">
-            <p>Incididunt ut labore et dolore magna.</p>
-            <p><a href="" class="button"> More info</a></p>
+            <h5>Thanks, for the new Design</h5><img src="images/posts/one.jpg">
+            <p>The ability to create, cast, direct, and engineer this viral content was a huge milestome for our department</p>
+            <p><a href="http://myccnm2012.tumblr.com" target="_blank" class="button"> View Campaign</a></p>
           </div>
           <div class="post columns four post-2">
-            <h5>Post Title</h5><img src="images/posts/two.jpg">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p><a href="" class="button">Read dude</a></p>
+            <h5>I love this video. Great Work</h5><img src="images/posts/two.jpg">
+            <p>The Cinematography and interactive digital presence has transformed our marketing and communication efforts.</p>
+            <p><a href="https://vimeo.com/65852728" target="_blank" class="button">Watch Videos</a></p>
           </div>
           <div class="post columns four post-3">
-            <h5>Post Title</h5><img src="images/posts/three.jpg">
-            <p>Duis aute irure dolor in reprehenderit.</p>
-            <p><a href="" class="button">Read More Dude</a></p>
+            <h5>It looks so good. Web Design greatness</h5><img src="images/posts/three.jpg">
+            <p>The web development and digital project execution was flawless. Thank you for helping us meet our company goals</p>
+            <p><a href="http://annualreport.ccnm.edu" target="_blank" class="button">View Site</a></p>
           </div>
         </div>
       </article>
@@ -108,19 +110,22 @@
             <li><a href="">Instagram</a></li>
           </ul>
         </div>
-        <div class="columns three"><strong>OTHER STUFF</strong>
+        <div class="columns three"><strong>Top 5 Sites</strong>
           <ul>
-            <li><a href="">Red Robin</a></li>
-            <li><a href="">Emerald Eagle</a></li>
-            <li><a href="">Crimson Crane</a></li>
-            <li><a href="">Auburn Abbot</a></li>
+            <li><a href="http://www.ezestudio.com" target="_blank">Eze Studio</a></li>
+            <li><a href="http://www.mediakingdoms.com" target="_blank">Media Kingdoms</a></li>
+            <li><a href="http://annualreport.ccnm.edu" target="_blank">Annual Reports(WordPress)</a></li>
+            <li><a href="http://www.ccnm.edu/sites/ccnm/files/flashcontent/ar_final.swf" target="_blank">Annual Reports(Flash)</a></li>
+            <li><a href="http://myccnm2012.tumblr.com/" target="_blank">Annual Reports(Social Media)</a></li>
           </ul>
         </div>
         <div class="columns six">
-          <p><strong>Sign Up for the newsletter</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h1>Wait, don't go</h1>
+          <p><strong> I promise... </strong>I wont send you an email unless it's really awesome.</p>
           <form class="row">
             <div class="columns eight">
               <input type="email" placeholder="Your Email" class="u-full-width">
+              <input type="hidden" name="recipient" value="info@ezenmezi.com" class="hidden">
             </div>
             <div class="columns four">
               <input type="submit" class="button-primary">
