--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="back-bird"></div>
       <div class="logo"></div>
       <div class="fore-bird"></div>
+      <div class="fore-bird-lefty"></div>
       <div class="barshade"></div>
     </header>
     <section class="content">
@@ -112,8 +113,8 @@
         </div>
         <div class="columns three"><strong>Top 5 Sites</strong>
           <ul>
-            <li><a href="http://www.ezestudio.com" target="_blank">Eze Studio</a></li>
-            <li><a href="http://www.mediakingdoms.com" target="_blank">Media Kingdoms</a></li>
+            <li><a href="http://www.ezestudio.com" target="_blank" title="(Freelance Site)">Eze Studio</a></li>
+            <li><a href="http://www.mediakingdoms.com" target="_blank" title="Company Site">Media Kingdoms</a></li>
             <li><a href="http://annualreport.ccnm.edu" target="_blank">Annual Reports(WordPress)</a></li>
             <li><a href="http://www.ccnm.edu/sites/ccnm/files/flashcontent/ar_final.swf" target="_blank">Annual Reports(Flash)</a></li>
             <li><a href="http://myccnm2012.tumblr.com/" target="_blank">Annual Reports(Social Media)</a></li>
