upload image for fiddle

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <p>I am a Digital Media Professional with over ten years of design, development and web/video engineering experience. Proven skill in overseeing projects from conception to go-live. Demonstrated ability to engage and work closely with all levels up to the C-Suite.</p>
-        <hr>
+        <hr><img src="images/mousepara.png">
         <h1>MY SKILLS</h1>
         <hr>
         <p>I excel with Social Media Planning and Strategy. I drove marketing plans and strategies to market and promoted educational and healthcare events through targeted social media campaigns, web content curation (infographics, videos), in-house print campaigns, student, donors, and alumni e-newsletters.</p>
